--- a/mobile.css
+++ b/mobile.css
@@ -1,27 +1,7 @@
     
-    .leftmid {
-        top: 30vh;
-        left: 50vw;
-        transform: translate(-50%, -50%);
-        position: absolute;
-    }
-    .mid {
-        top: 60vh;
-        left: 50vw;
-        transform: translate(-50%, -50%);
-        position: absolute;
-    }
-    .rightmid {
-    top: 90vh;
-    left: 50vw;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    }
-
-    
     .twrapper{
         width: 100%;
-        height: 100%;
+        height: 90%;
         margin-top: 5%;
         display: grid;
         grid-template-columns: repeat(1,1fr);
@@ -30,13 +10,12 @@
         justify-content: center;
         justify-items: center;
         text-align: center;
-        margin: 100px;
     }
         .t {
             text-align: left;
             width: 75vw;
             height: 40vh;
-            margin-bottom: 15vh;
+            margin-bottom: 5vh;
             display: inline-block;
             border-radius: 5px;
             background-color: rgba(255, 255, 255, 1);
@@ -56,6 +35,7 @@
         justify-content: center;
         justify-items: center;
         text-align: center;
+        position: absolute;
         } 
             .projcard {
                 width: 36vw;
